--- a/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
+++ b/src/MySpot.Infrastructure/MySpot.Infrastructure.csproj
@@ -11,7 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
